fixed a small alignment issue

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,8 +61,9 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile{
     flex-direction: column-reverse;
-
+  }
     .text-content {
       padding-left: 1%;
       padding-right: 0;
